# openitms-smb

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  LICENSE  NOTICE.md  PLAN.md  README.en.md  README.md  TASKS.md  sonar-project.properties
.githooks/: pre-commit
core-patches/: 0001-plugin-manager-hook.patch  0002-branding.patch  0003-default-password-banner.patch  0005-registry-client.patch  0006-management-ui.patch  0007-service-manager.patch  0008-gitea-autorepo.patch  0009-winrs-app.patch  0010-winrs-console.patch  0011-seed-host-project.patch  0012-view-local-repo.patch  0013-menu-tooltips.patch  0014-endpoint-enroll-script.patch  0015-i18n-quickwin-ui.patch  0016-enroll-1click.patch  0017-winrs-history.patch  0018-network-discovery.patch  0019-enroll-ps51-compat.patch  0020-enroll-pem-pkcs1.patch  0021-discovery-autoadd-schedule.patch  0022-enroll-clientcert-negotiation.patch  0023-enroll-localaccount-token.patch  0024-enroll-admin-domain.patch  0025-cert-security-panel.patch  0025-winrs-inventory.patch  0026-inventory-extra-schedule.patch  0027-inventory-filter-diff-export.patch  0028-inventory-export-detail.patch  0029-template-script-editor.patch  0030-discovery-separate-inventory.patch  0031-vietnamese-language.patch  0032-template-form-ux.patch  0033-repo-scaffold.patch  0034-repo-file-browser.patch  0035-device-inventory-ui.patch  0036-device-collect-host-ui.patch  0037-local-self-collect.patch  (+7 more)
proto/: buf.yaml  (+1 more)
sdk/python/: pyproject.toml
sdk/python/quickwin_plugin/: __init__.py  plugin.py
(+223 files in other folders)
