[project]
name = "quickwin-plugin-sdk"
version = "0.1.0"
description = "OpenITMS-SMB plugin SDK for Python (HashiCorp go-plugin + gRPC)"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "grpcio>=1.60",
    "grpcio-health-checking>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = ["grpcio-tools>=1.60"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["quickwin_plugin"]
